# moldenViz

./: .gitignore  .readthedocs.yaml  .ruff.toml  AGENTS.md  DEVELOPMENT.md  README.md  api_review.md  api_review_decisions.md  asv.conf.json  code_health_findings.md  demo_plotter_tests.py  justfile  moldenVizs_doc_report.md  plotter_split_plan.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  _shared.py  grids.py  kernels.py  memory.py  parsing.py  tabulation.py
docs/: SCREENSHOT_PLACEHOLDERS.md  requirements.txt
docs/source/: api-stability.rst  api.rst  benchmarks.rst  cli-guide.rst  conf.py  configuration.rst  contributing.rst  getting-started.rst  index.rst  python-api.rst  roadmap.rst  troubleshooting.rst  usage.rst
docs/source/_autosummary/: moldenViz.Parser.rst  moldenViz.Plotter.rst  moldenViz.Tabulator.rst
docs/source/_static/: custom.css
scripts/: generate_pyscf_cartesian_reference.py  generate_pyscf_molden.py  generate_solid_harmonics.py
src/moldenViz/: __about__.py  __init__.py  _cli.py  _config_module.py  _generated_solid_harmonics.py  _plotter_jobs.py  _plotter_rendering.py  _plotter_ui.py  _plotting_objects.py  cli.py  dynamic_grid_plan.md  models.py  parser.py  plotter.py  plotter_ui.py  tabulate.py  tabulator.py
src/moldenViz/default_configs/: atom_types.json  config.toml
src/moldenViz/examples/: __init__.py  _get_example_files.py  get_example_files.py
src/moldenViz/examples/molden_files/: benzene.inp  furan.inp  prismane.inp  pyridine.inp
tests/: _src_imports.py  conftest.py  sample_molden.inp  test_api.py  test_cli.py  test_colored_formatter.py  test_config.py  test_config_save.py  test_config_validation.py  test_config_validation_standalone.py  test_mo_coeffs_single_array.py  test_parser.py  test_plotter.py  test_plotter_async.py  test_plotter_jobs.py  test_plotting_objects.py  test_save_settings_integration.py  test_tabulator.py  test_tabulator_config_grid.py
tests/fixtures/pyscf/: README.md  acrolein-cc-pvqz-cartesian.molden  acrolein-cc-pvqz-spherical.molden  benzene-cc-pvqz-cartesian.molden  benzene-cc-pvqz-spherical.molden  co-cc-pvqz-cartesian-reference.json  co-cc-pvqz-cartesian.molden  co-cc-pvqz-spherical.molden  co2-cc-pvqz-cartesian.molden  co2-cc-pvqz-spherical.molden  furan-cc-pvqz-cartesian.molden  furan-cc-pvqz-spherical.molden  h2o-cc-pvqz-cartesian.molden  h2o-cc-pvqz-spherical.molden  o2-cc-pvqz-cartesian.molden  o2-cc-pvqz-spherical.molden  prismane-cc-pvqz-cartesian.molden  prismane-cc-pvqz-spherical.molden  pyridine-cc-pvqz-cartesian.molden  pyridine-cc-pvqz-spherical.molden
