[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moldenViz"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
keywords = []
authors = [{ name = "Faria22", email = "fariafelipe22@hotmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=2.2",
    "pyvista>=0.46",
    "pyvistaqt>=0.11",
    "scipy>=1.15",
    "toml>=0.10",
    "pydantic>=2.12.0",
    "PyQt5>=5.15",
    "PySide6>=6.10",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.31.4",
    "pytest>=8.4",
    "pytest-benchmark>=4.0",
    "pytest-cov>=5.0",
    "ruff>=0.14",
]
docs = ["pydata-sphinx-theme>=0.16", "sphinx>=8.0"]

[project.urls]
Documentation = "https://moldenviz.readthedocs.io/en/latest/"
Issues = "https://github.com/Faria22/moldenViz/issues"
Source = "https://github.com/Faria22/moldenViz"

[project.scripts]
moldenViz = "moldenViz.cli:main"

[tool.hatch.version]
path = "src/moldenViz/__about__.py"

[tool.hatch.envs.default]
dev-mode = true
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = "ruff check {args:src tests}"
typecheck = "basedpyright {args:src tests}"
test = "pytest --benchmark-skip"
bench = "pytest --benchmark-only"
cov = [
    "coverage erase",
    "coverage run -m pytest --benchmark-skip",
    "coverage combine",
    "coverage report -m",
]
all = ["lint", "typecheck", "test"]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.hatch.build.targets.sdist]
exclude = ["/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/moldenViz"]

[tool.coverage.run]
source_pkgs = ["moldenViz", "tests"]
branch = true
parallel = true
omit = ["src/moldenViz/__about__.py"]

[tool.coverage.paths]
moldenViz = ["src/moldenviz", "*/moldenviz/src/moldenviz"]
tests = ["tests", "*/moldenViz/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
