[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[project]
name = "moldenViz"
version = "1.11.0"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = []
authors = [{ name = "Faria22", email = "fariafelipe22@hotmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=2.2",
]

[project.optional-dependencies]
gui = [
    "matplotlib",
    "pydantic>=2.12.0",
    "pyvista",
    "pyvistaqt",
    "PySide6>=6.10",
    "toml>=0.10",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "matplotlib",
    "pydantic>=2.12.0",
    "PySide6>=6.10",
    "pyvista",
    "pyvistaqt",
    "pytest>=9.0.3",
    "pytest-benchmark>=4.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.22",
    "toml>=0.10",
]
docs = [
    "matplotlib",
    "pydantic>=2.12.0",
    "pydata-sphinx-theme>=0.16",
    "sphinx>=8.0",
    "toml>=0.10",
]

[project.urls]
Documentation = "https://moldenviz.readthedocs.io/en/latest/"
Issues = "https://github.com/Faria22/moldenViz/issues"
Source = "https://github.com/Faria22/moldenViz"

[project.scripts]
moldenViz = "moldenViz.cli:main"

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.uv]
default-groups = []

[tool.uv.build-backend]
module-name = "moldenViz"
source-exclude = ["/docs"]

[tool.coverage.run]
source_pkgs = ["moldenViz", "tests"]
branch = true
parallel = true
omit = ["src/moldenViz/__about__.py"]

[tool.coverage.paths]
moldenViz = ["src/moldenviz", "*/moldenviz/src/moldenviz"]
tests = ["tests", "*/moldenViz/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
